Add RandomizedSetDayThirty class: implement insert, remove, and getRandom methods for a randomized set